--- a/templates/doc_delete.html
+++ b/templates/doc_delete.html
@@ -4,6 +4,7 @@
   <h1>Удаление документа</h1>
   <a href="{{ url_for('get_doc',doc_id=doc.id) }}">вернуться к документу</a>
   <form method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
     <p>Удалить документ {{ doc.title }}</p>
     <input type="submit" value="Удалить">
   </form>
